test_suite/tests/ui/enum-representation/content-no-tag.stderr
error: #[serde(tag = "...", content = "...")] must be used together
 --> $DIR/content-no-tag.rs:4:9
  |
4 | #[serde(content = "c")]
  |         ^^^^^^^
